trunk/Archive2/5f/cad822ba03dc62/output
main.cpp: In function 'int main()':
main.cpp:21:35: error: no matching function for call to 'begin(mypair [m_lLineNumber])'
     std::sort(std::begin(myPairArr),std::end(myPairArr),comparator);
                                   ^
main.cpp:21:35: note: candidates are:
In file included from /usr/local/include/c++/4.9.0/utility:74:0,
                 from /usr/local/include/c++/4.9.0/algorithm:60,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/initializer_list:89:5: note: template<class _Tp> constexpr const _Tp* std::begin(std::initializer_list<_Tp>)
     begin(initializer_list<_Tp> __ils) noexcept
     ^
/usr/local/include/c++/4.9.0/initializer_list:89:5: note:   template argument deduction/substitution failed:
main.cpp:21:35: note:   mismatched types 'std::initializer_list<_Tp>' and 'mypair* {aka std::pair<int, int>*}'
     std::sort(std::begin(myPairArr),std::end(myPairArr),comparator);
                                   ^
In file included from /usr/local/include/c++/4.9.0/string:51:0,
                 from /usr/local/include/c++/4.9.0/random:40,
                 from /usr/local/include/c++/4.9.0/bits/stl_algo.h:66,
                 from /usr/local/include/c++/4.9.0/algorithm:62,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/bits/range_access.h:48:5: note: template<class _Container> decltype (__cont.begin()) std::begin(_Container&)
     begin(_Container& __cont) -> decltype(__cont.begin())
     ^
/usr/local/include/c++/4.9.0/bits/range_access.h:48:5: note:   template argument deduction/substitution failed:
main.cpp:21:35: note:   variable-sized array type 'mypair [m_lLineNumber] {aka std::pair<int, int> [m_lLineNumber]}' is not a valid template argument
     std::sort(std::begin(myPairArr),std::end(myPairArr),comparator);
                                   ^
In file included from /usr/local/include/c++/4.9.0/string:51:0,
                 from /usr/local/include/c++/4.9.0/random:40,
                 from /usr/local/include/c++/4.9.0/bits/stl_algo.h:66,
                 from /usr/local/include/c++/4.9.0/algorithm:62,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/bits/range_access.h:58:5: note: template<class _Container> decltype (__cont.begin()) std::begin(const _Container&)
     begin(const _Container& __cont) -> decltype(__cont.begin())
     ^
/usr/local/include/c++/4.9.0/bits/range_access.h:58:5: note:   template argument deduction/substitution failed:
main.cpp:21:35: note:   variable-sized array type 'mypair [m_lLineNumber] {aka std::pair<int, int> [m_lLineNumber]}' is not a valid template argument
     std::sort(std::begin(myPairArr),std::end(myPairArr),comparator);
                                   ^
In file included from /usr/local/include/c++/4.9.0/string:51:0,
                 from /usr/local/include/c++/4.9.0/random:40,
                 from /usr/local/include/c++/4.9.0/bits/stl_algo.h:66,
                 from /usr/local/include/c++/4.9.0/algorithm:62,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/bits/range_access.h:87:5: note: template<class _Tp, long unsigned int _Nm> _Tp* std::begin(_Tp (&)[_Nm])
     begin(_Tp (&__arr)[_Nm])
     ^
/usr/local/include/c++/4.9.0/bits/range_access.h:87:5: note:   template argument deduction/substitution failed:
main.cpp:21:35: note:   variable-sized array type 'long int' is not a valid template argument
     std::sort(std::begin(myPairArr),std::end(myPairArr),comparator);
                                   ^
main.cpp:21:55: error: no matching function for call to 'end(mypair [m_lLineNumber])'
     std::sort(std::begin(myPairArr),std::end(myPairArr),comparator);
                                                       ^
main.cpp:21:55: note: candidates are:
In file included from /usr/local/include/c++/4.9.0/utility:74:0,
                 from /usr/local/include/c++/4.9.0/algorithm:60,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/initializer_list:99:5: note: template<class _Tp> constexpr const _Tp* std::end(std::initializer_list<_Tp>)
     end(initializer_list<_Tp> __ils) noexcept
     ^
/usr/local/include/c++/4.9.0/initializer_list:99:5: note:   template argument deduction/substitution failed:
main.cpp:21:55: note:   mismatched types 'std::initializer_list<_Tp>' and 'mypair* {aka std::pair<int, int>*}'
     std::sort(std::begin(myPairArr),std::end(myPairArr),comparator);
                                                       ^
In file included from /usr/local/include/c++/4.9.0/string:51:0,
                 from /usr/local/include/c++/4.9.0/random:40,
                 from /usr/local/include/c++/4.9.0/bits/stl_algo.h:66,
                 from /usr/local/include/c++/4.9.0/algorithm:62,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/bits/range_access.h:68:5: note: template<class _Container> decltype (__cont.end()) std::end(_Container&)
     end(_Container& __cont) -> decltype(__cont.end())
     ^
/usr/local/include/c++/4.9.0/bits/range_access.h:68:5: note:   template argument deduction/substitution failed:
main.cpp:21:55: note:   variable-sized array type 'mypair [m_lLineNumber] {aka std::pair<int, int> [m_lLineNumber]}' is not a valid template argument
     std::sort(std::begin(myPairArr),std::end(myPairArr),comparator);
                                                       ^
In file included from /usr/local/include/c++/4.9.0/string:51:0,
                 from /usr/local/include/c++/4.9.0/random:40,
                 from /usr/local/include/c++/4.9.0/bits/stl_algo.h:66,
                 from /usr/local/include/c++/4.9.0/algorithm:62,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/bits/range_access.h:78:5: note: template<class _Container> decltype (__cont.end()) std::end(const _Container&)
     end(const _Container& __cont) -> decltype(__cont.end())
     ^
/usr/local/include/c++/4.9.0/bits/range_access.h:78:5: note:   template argument deduction/substitution failed:
main.cpp:21:55: note:   variable-sized array type 'mypair [m_lLineNumber] {aka std::pair<int, int> [m_lLineNumber]}' is not a valid template argument
     std::sort(std::begin(myPairArr),std::end(myPairArr),comparator);
                                                       ^
In file included from /usr/local/include/c++/4.9.0/string:51:0,
                 from /usr/local/include/c++/4.9.0/random:40,
                 from /usr/local/include/c++/4.9.0/bits/stl_algo.h:66,
                 from /usr/local/include/c++/4.9.0/algorithm:62,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/bits/range_access.h:97:5: note: template<class _Tp, long unsigned int _Nm> _Tp* std::end(_Tp (&)[_Nm])
     end(_Tp (&__arr)[_Nm])
     ^
/usr/local/include/c++/4.9.0/bits/range_access.h:97:5: note:   template argument deduction/substitution failed:
main.cpp:21:55: note:   variable-sized array type 'long int' is not a valid template argument
     std::sort(std::begin(myPairArr),std::end(myPairArr),comparator);
                                                       ^
